--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-responsive": "^9.0.2",
     "recharts": "^2.8.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "usehooks-ts": "^2.9.1"
   }
 }
