--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
+    "react-tooltip": "^5.21.4",
     "recharts": "^2.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
